environments/dev/kong/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    environment: dev
    app.kubernetes.io/managed-by: argocd
